  * Remove binary only firmwares for:
    - Alteon AceNIC/3Com 3C985/NetGear GA620 Gigabit support
    - Broadcom Tigon3 support
    - USB Keyspan USA-xxx Serial Driver
    - Korg 1212 IO
    - ESS Allegro/Maestro3
    - Yamaha YMF724/740/744/754
    - Technotrend/Hauppauge Nova-USB devices
    - YAM driver for AX.25
    - MyriCOM Gigabit Ethernet support
    - PTI Qlogic, ISP Driver
  * Disable now broken drivers:
    - Alteon AceNIC/3Com 3C985/NetGear GA620 Gigabit support
    - Broadcom Tigon3 support
    - USB Keyspan USA-xxx Serial Driver
    - Technotrend/Hauppauge Nova-USB devices
    - YAM driver for AX.25
    - MyriCOM Gigabit Ethernet support
    - PTI Qlogic, ISP Driver
  * Add -common to common header package names.
  * Drop provides from common header packages.

  [ Aurelien Jarno ]
  * [mips, mipsel] Add a 64-bit image (5kc-malta) for the MIPS Malta board.
    (closes: #435677)

  [ Frederik Schüler ]
  * Move all PATA options into the global config file, exept PATA_ARTOP
    (arm/ixp4xx) and PATA_MPC52xx (powerpc).
  * Move new global options into the global config file
  * Clean up new amd64 options

 -- Bastian Blank <waldi@debian.org>  Wed, 26 Sep 2007 21:09:13 +0200

linux-2.6 (2.6.22-5) UNRELEASED; urgency=low

  [ maximilian attems ]
  * Add stable release 2.6.22.6 (minus 2 abi breaker):
    - USB: allow retry on descriptor fetch errors
    - PCI: lets kill the 'PCI hidden behind bridge' message
    - Netfilter: Missing Kbuild entry for netfilter
    - Fix soft-fp underflow handling.
    - SPARC64: Fix sparc64 task stack traces.
    - DCCP: Fix DCCP GFP_KERNEL allocation in atomic context
    - SNAP: Fix SNAP protocol header accesses.
    - NET: Fix missing rcu unlock in __sock_create()
    - IPv6: Invalid semicolon after if statement
    - TCP: Fix TCP rate-halving on bidirectional flows.
    - TCP: Fix TCP handling of SACK in bidirectional flows.
    - uml: fix previous request size limit fix