@@ -62,6 +62,8 @@ rm drivers/usb/serial/keyspan_usa28x_fw.h
 rm drivers/usb/serial/keyspan_usa49w_fw.h
 rm drivers/usb/serial/keyspan_usa49wlc_fw.h
 
+rm sound/pci/cs46xx/cs46xx_image.h
+rm sound/pci/cs46xx/imgs
 unifdef sound/pci/korg1212/korg1212.c -UCONFIG_SND_KORG1212_FIRMWARE_IN_KERNEL
 rm sound/pci/korg1212/korg1212-firmware.h
 unifdef sound/pci/maestro3.c -UCONFIG_SND_MAESTRO3_FIRMWARE_IN_KERNEL
