@@ -1,7 +1,9 @@
-diff --git a/sound/pci/Kconfig b/sound/pci/Kconfig
-index c6b4410..b11d55d 100644
 --- a/sound/pci/Kconfig
 +++ b/sound/pci/Kconfig
+@@ -199,2 +199,3 @@ config SND_CS46XX
+ 	tristate "Cirrus Logic (Sound Fusion) CS4280/CS461x/CS462x/CS463x"
++	depends on BROKEN
+ 	depends on SND
 @@ -587,7 +587,7 @@ config SND_INTEL8X0M
  config SND_KORG1212
  	tristate "Korg 1212 IO"
