@@ -53,6 +53,7 @@ linux-2.6 (2.6.23~rc5-1~experimental.1) UNRELEASED; urgency=low
     - YAM driver for AX.25
     - MyriCOM Gigabit Ethernet support
     - PTI Qlogic, ISP Driver
+    - Cirrus Logic (Sound Fusion) CS4280/CS461x/CS462x/CS463x
   * Disable now broken drivers:
     - Alteon AceNIC/3Com 3C985/NetGear GA620 Gigabit support
     - Broadcom Tigon3 support
@@ -61,6 +62,7 @@ linux-2.6 (2.6.23~rc5-1~experimental.1) UNRELEASED; urgency=low
     - YAM driver for AX.25
     - MyriCOM Gigabit Ethernet support
     - PTI Qlogic, ISP Driver
+    - Cirrus Logic (Sound Fusion) CS4280/CS461x/CS462x/CS463x
   * Add -common to common header package names.
   * Drop provides from common header packages.
 
